Added conversation, changed LLM model added lecturer prompts formatted conversation in Markdown

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-Flask
-Flask-Login
-Flask-WTF
-email-validator
-Flask-Migrate
-Flask-SQLAlchemy
-SQLAlchemy
-python-dotenv
-passlib
-pyodbc
-pytest
-gunicorn
-waitress
-openai
-pypdf
+Flask==3.1.2
+Flask-Login==0.6.3
+Flask-WTF==1.2.2
+email-validator==2.3.0
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+SQLAlchemy==2.0.44
+python-dotenv==1.1.1
+passlib==1.7.4
+pyodbc==5.2.0
+pytest==8.4.2
+gunicorn==23.0.0
+waitress==3.0.2
+openai==2.4.0
+pypdf==6.1.1
+fpdf2==2.7.8
